--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link
             rel="icon"
             type="image/svg+xml"
-            href="./public/images/favicon-32x32.png"
+            href=" /images/favicon-32x32.png"
         />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Frontend Mentor | Advice generator app</title>
@@ -20,10 +20,7 @@
             <q class="advice-card__quote" id="adviceContainer">Loading... </q>
             <div class="advice-card__divider" aria-hidden="true"></div>
             <button class="advice-card__generate-btn" id="adviceGenerateBtn">
-                <img
-                    src="./public/images/icon-dice.svg"
-                    alt="generate new advice"
-                />
+                <img src=" /images/icon-dice.svg" alt="generate new advice" />
             </button>
         </main>
         <script type="module" src="/main.js"></script>
